[workspace]

members = [
	"d2019-01",
	"d2019-02",
	"d2019-03",
	"d2019-04",
	"d2019-05",
	"d2019-06",
	"d2019-07",
	"d2019-08",
	"d2019-09",
	"d2019-10",
	"d2019-11",
	"d2019-12",
	"d2019-13",
	"d2019-14",
	"d2019-15",
	"d2019-16",
	"d2019-17",
	"d2019-18",
	"d2019-19",
	"d2019-20",
	"d2019-21",
	"d2019-22",
	"d2019-23",
	"d2019-24",
	"d2019-25",
]
