[workspace]

members = [
	"common",
	"d2018-01",
	"d2018-02",
	"d2018-03",
	"d2018-04",
	"d2018-05",
	"d2018-06",
	"d2018-07",
	"d2018-08",
	"d2018-09",
	"d2018-10",
	"d2018-11",
	"d2018-12",
	"d2018-13",
	"d2018-14",
	"d2018-15",
	"d2018-16",
	"d2018-17",
	"d2018-18",
	"d2018-19",
	"d2018-20",
	"d2018-21",
	"d2018-22",
	"d2018-23",
	"d2018-24",
	"d2018-25",
	"d2019-01",
	"d2019-02",
	"d2019-03",
	"d2019-04",
	"d2019-05",
	"d2019-06",
	"d2019-07",
	"d2019-08",
	"d2019-09",
	"d2019-10",
	"d2019-11",
	"d2019-12",
	"d2019-13",
	"d2019-14",
	"d2019-15",
	"d2019-16",
	"d2019-17",
	"d2019-18",
	"d2019-19",
	"d2019-20",
	"d2019-21",
	"d2019-22",
	"d2019-23",
	"d2019-24",
	"d2019-25",
]
