[workspace]
resolver = "2"
members = [
	"daocutil",
	"d2015",
	"d2016",
	"d2017",
	"d2018",
	"d2019",
	"d2020",
	"d2021",
	"d2022",
	"d2023",
]

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
cognitive_complexity = "warn"
missing_panics_doc = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
