[workspace]

members = [
	"d2018-01",
	"d2018-02",
	"d2018-03",
	"d2018-04",
	"d2018-05",
	"d2018-06",
	"d2018-07",
	"d2018-08",
	"d2018-09",
	"d2018-10",
	"d2018-11",
	"d2018-12",
	"d2018-13",
	"d2018-14",
	"d2018-15",
	"d2018-16",
	"d2018-17",
	"d2018-18",
	"d2018-19",
	"d2018-20",
	"d2018-21",
	"d2018-22",
	"d2018-23",
	"d2018-24",
	"d2018-25",
]
