[package]
name = "d2019"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
daocutil = { version = "0.1.0", path = "../daocutil" }
itertools = "0.12.0"
nu-ansi-term = "0.49.0"
regex = "1.10.2"
thiserror = "1.0.50"
