[package]
name = "d2020"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.10.5"
num = "0.4.0"
num-integer = "0.1.45"
regex = "1.8.1"
thiserror = "1.0.40"

daocutil = { path = "../daocutil" }

[dev-dependencies]
static_assertions = "1.1.0"
