[package]
name = "d2020"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.11.0"
num = "0.4.1"
num-integer = "0.1.45"
regex = "1.10.2"
thiserror = "1.0.50"

daocutil = { path = "../daocutil" }

[dev-dependencies]
static_assertions = "1.1.0"
