[package]
name = "d2020"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
edition = "2021"
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
itertools = "0.13.0"
num = "0.4.1"
num-integer = "0.1.46"
regex = "1.10.4"
thiserror = "1.0.58"

daocutil = { path = "../daocutil" }

[dev-dependencies]
static_assertions = "1.1.0"
